--- a/eval.ipynb
+++ b/eval.ipynb
@@ -2,46 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numerapi\n",
+    "from numerapi import utils\n",
+    "from typing import List, Dict\n",
     "import pandas as pd\n",
-    "from utils import get_model_performance, query_answer_to_clean_df\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
     "from models_to_eval import models as models_to_eval\n",
+    "from utils import get_model_performance, query_answer_to_clean_df\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "\n",
+    "napi = numerapi.NumerAPI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get models\n",
     "model_evals = []\n",
-    "for model in models_to_eval:\n",
-    "    result = get_model_performance(model)\n",
-    "    model_evals.append(query_answer_to_clean_df(result))"
+    "for model_name in models_to_eval:\n",
+    "    result = get_model_performance(model_name)\n",
+    "    df = query_answer_to_clean_df(result)\n",
+    "    model_evals.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Some parameters\n",
     "MIN_ROUND = 471\n",
     "TO_ANALYSE = [\"v2_corr20\", \"tc\"]\n",
-    "\n",
     "###\n",
     "metrics = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
